--- a/vendor.conf
+++ b/vendor.conf
@@ -22,7 +22,7 @@ github.com/docker/go-connections 3ede32e2033de7505e6500d6c868c2b9ed9f169d
 github.com/docker/go-events 18b43f1bc85d9cdd42c05a6cd2d444c7a200a894
 github.com/docker/go-units 9e638d38cf6977a37a8ea0078f3ee75a7cdb2dd1
 github.com/docker/libtrust 9cbd2a1374f46905c68a4eb3694a130610adc62a
-github.com/docker/notary e8ee47e98edf5bb12c29735c5941fa6e482dcd9f
+github.com/docker/notary v0.4.2
 github.com/docker/swarmkit 79381d0840be27f8b3f5c667b348a4467d866eeb
 github.com/flynn-archive/go-shlex 3f9db97f856818214da2e1057f8ad84803971cff
 github.com/go-sql-driver/mysql a0583e0143b1624142adab07e0e97fe106d99561
