--- a/circle.yml
+++ b/circle.yml
@@ -71,6 +71,7 @@ jobs:
                 test-$CIRCLE_BUILD_NUM:/go/src/github.com/docker/cli/coverage.txt \
                 coverage.txt
             apk add -U bash curl
+            apk add --upgrade libcurl
             curl -s https://codecov.io/bash | bash
 
   validate:
